# pfalign

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  build.sh  meson.build  meson.options  pyproject.toml
cli/: main.cpp  meson.build
cli/commands/: align.cpp  commands.h  encode.cpp  full.cpp  input_utils.cpp  input_utils.h  metrics.cpp  msa.cpp  npy_utils.h  pairwise.cpp  similarity.cpp  superposition.cpp  tree.cpp  utils.cpp
docs/: meson.build
pfalign/: __init__.py  cli.py  errors.py  meson.build
pfalign/_bindings/: common_types.h  meson.build  numpy_utils.h  pybind_main.cpp
pfalign/_core/: meson.build
pfalign/_core/src/pfalign/adapters/: alignment_adapters.cpp  alignment_adapters.h  alignment_types.h  meson.build
pfalign/_core/src/pfalign/algorithms/: meson.build
pfalign/_core/src/pfalign/cli/: app.cpp  app.h  cli.h  errors.h  formatter.cpp  formatter.h  meson.build  option.cpp  option.h  types.h  validators.cpp  validators.h
pfalign/_core/src/pfalign/common/: arena_allocator.h  benchmark.h  benchmark_mpnn_scalar.cpp  cpu_utilization.h  golden_data_test.h  growable_arena.h  memory_budget.h  memory_profiler.h  memory_timeline.h  meson.build  mpnn_types.h  perf_counters.h  perf_timer.h  profile_scope.h  profiling.h  progress_bar.h  result_types.cpp  result_types.h  span.h  thread_pool.h  tuning.h
pfalign/_core/src/pfalign/dispatch/: backend_traits.h  execution_policy.cpp  execution_policy.h  meson.build  runtime_dispatch.cpp  runtime_dispatch.h  scalar_traits.h
pfalign/_core/src/pfalign/errors/: error_categories.h  formatters.cpp  formatters.h  meson.build  messages.h  pfalign_error.cpp  pfalign_error.h  validators.cpp  validators.h
pfalign/_core/src/pfalign/io/: alignment_formats.cpp  alignment_formats.h  alignment_transform.cpp  amino_acids.h  fasta_writer.cpp  fasta_writer.h  meson.build  mmcif_parser.h  pdb_parser.h  pdb_writer.cpp  pdb_writer.h  protein_structure.h  sequence_utils.h
pfalign/_core/src/pfalign/modules/: meson.build
pfalign/_core/src/pfalign/primitives/: meson.build
pfalign/_core/src/pfalign/types/: guide_tree_types.cpp  guide_tree_types.h  meson.build
pfalign/alignment/: __init__.py
pfalign/metrics/: __init__.py
pfalign/structure/: __init__.py
pfalign/tests/: conftest.py  test_array_lifetime.py  test_auto_detection.py  test_encode_api.py  test_msa_api.py  test_pairwise_api.py  test_parallel_mpnn.py  test_parser_validation.py  test_result_methods.py  utils.py
pfalign/tree/: __init__.py
tests/: meson.build  precision_test.cpp  precision_test_direct_affine.cpp  precision_test_jax_affine.cpp  test_all_variants.cpp  test_comprehensive_validation.cpp  test_float16.cpp  test_mpnn_all_variants.cpp  test_utils.h
tests/data/fixtures/weights/: v1_mpnn_weights.safetensors
tests/data/integration/msa_families/: metadata.json
tests/data/integration/parity/: phase3_alignment.fasta  phase3_v2_alignment.npy  test_dhfr.fasta  test_dhfr.npy  test_fixed_same_org.fasta  test_fixed_self.npy  test_same_org.npy  test_tm_diff.fasta  test_tm_diff.npy  test_tm_self.fasta
tests/data/validation/end_to_end/1crn_self/: metadata.json  posteriors.npy
tests/data/validation/end_to_end/1crn_self_direct_regular/: metadata.json  posteriors.npy
tests/data/validation/end_to_end/1crn_vs_1ubq/: metadata.json  posteriors.npy
tests/data/validation/end_to_end/1lyz_self/: metadata.json  posteriors.npy
tests/fixtures/: debug_v2_intermediates.cpp  quick_debug_v2.cpp
tests/fixtures/generators/: generate_pylddt_parity_data.py  regenerate_mpnn_golden.cpp
tests/integration/: end_to_end_align.cpp  test_end_to_end_golden.cpp  test_msa_end_to_end.cpp  test_self_match_suite.cpp  test_v2_mpnn_on_pdb.cpp
tests/integration/parity/: compare_cpp_jax_crambin.py  compare_v1_v2_mpnn.cpp  test_backward_parity.cpp  test_pylddt_parity.cpp
tests/unit/: test_minimal.cpp  test_minimal_sw.cpp
tests/unit/algorithms/distance_metrics/: test_distance_matrix.cpp
tests/unit/algorithms/progressive_msa/: test_msa_families.cpp  test_progressive_msa.cpp
tests/unit/algorithms/tree_builders/: test_tree_algorithms.cpp
tests/unit/bindings/: test_bindings.cpp
tests/unit/common/: test_arena.cpp  test_arena_alignment.cpp  test_growable_arena.cpp  test_memory_budget.cpp  test_memory_profiler.cpp  test_profiling.cpp  test_thread_pool.cpp
tests/unit/data_structures/: test_alignment_adapters.cpp  test_guide_tree.cpp  test_sequence_cache.cpp
tests/unit/io/: test_fasta_writer.cpp  test_parsers.cpp  test_sequence_utils.cpp
tests/unit/modules/alignment/: test_alignment.cpp
tests/unit/modules/decode/: test_decode.cpp
tests/unit/modules/mpnn/: test_mpnn.cpp  test_mpnn_comprehensive.cpp  test_mpnn_golden.cpp
tests/unit/modules/msa/: test_profile.cpp  test_profile_golden.cpp  test_profile_merge_golden.cpp
tests/unit/modules/pairwise/: test_dual_score_comparison.cpp  test_optional_dual_score.cpp  test_pairwise.cpp  test_pairwise_full.cpp  test_pairwise_score.cpp  test_sw_modes.cpp
tests/unit/modules/similarity/: test_profile_similarity.cpp  test_similarity.cpp  test_similarity_golden.cpp
tests/unit/primitives/alignment_decode/: test_alignment_decode.cpp
tests/unit/primitives/gather/: test_gather.cpp
tests/unit/primitives/gemm/: test_gemm.cpp
tests/unit/primitives/kabsch/: test_kabsch.cpp
tests/unit/primitives/knn/: test_knn.cpp
tests/unit/primitives/layer_norm/: test_layer_norm.cpp
tests/unit/primitives/rbf/: test_rbf.cpp
tests/unit/primitives/reduce/: test_reduce.cpp
tests/unit/primitives/smith_waterman/: test_smith_waterman.cpp  test_smith_waterman_comprehensive.cpp  test_sw_golden.cpp  test_temperature_scaling.cpp
tests/unit/primitives/structural_metrics/: test_dali.cpp  test_distance_matrix.cpp  test_lddt.cpp  test_msa_metrics.cpp  test_structural_metrics.cpp
tests/unit/primitives/svd3x3/: test_svd3x3.cpp
tests/unit/tools/weights/: test_safetensors_loader.cpp
tests/validation/: test_edge_cases.cpp  test_lddt_dali_validation.cpp  test_negative_controls.cpp  validate_similarity.cpp  validate_sw.cpp  validate_v2_vs_v1_numerical.cpp
(+338 files in other folders)
