# Install Python source files for the pfalign package

py.install_sources(
  '__init__.py',
  'cli.py',
  'errors.py',
  'py.typed',
  subdir: 'pfalign',
)

# Install alignment submodule
py.install_sources(
  'alignment/__init__.py',
  subdir: 'pfalign/alignment',
)

# Install tree submodule
py.install_sources(
  'tree/__init__.py',
  subdir: 'pfalign/tree',
)

# Install structure submodule
py.install_sources(
  'structure/__init__.py',
  subdir: 'pfalign/structure',
)

# Install metrics submodule
py.install_sources(
  'metrics/__init__.py',
  subdir: 'pfalign/metrics',
)
